z overlap fixed on most pages, css changes

--- a/frontend/src/styles/CourseDetails.css
+++ b/frontend/src/styles/CourseDetails.css
@@ -12,13 +12,14 @@
     padding-bottom: 50px;
 }
 
-.plasma-background {
-    position: fixed;
+.beams-background {
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 0;
+    pointer-events: none;
 }
 
 .course-details-container {
